--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -1,12 +1,12 @@
 .footer
 {
     height: 50px;
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(34,34,34,1) 100%);
+    background: linear-gradient(90deg, rgb(14, 14, 14) 0%, rgb(16, 16, 16) 100%);
     color:whitesmoke;
     display: flex;
     justify-content:space-around;
     align-items: center;
-    padding-left: 70%;
+    padding-left: auto;
 }
 
 .footer p
