--- a/src/Component/Card/Card.css
+++ b/src/Component/Card/Card.css
@@ -4,13 +4,14 @@
     gap: 50px;
     justify-content: center;
     padding: 10px;
-    height: auto;
+    height: 100%;
     width: 100%;
     align-items: center;
     box-sizing: border-box;
-}
-.card {
+}.card {
     width: 500px;
+    min-width: 300px;
+    min-height: 150px;
     height: 300px;
     border: 1px solid white;
     display: flex;
@@ -22,6 +23,7 @@
     position: relative; 
     overflow: hidden; 
     background-color: #2c2c2c;
+    transition: transform 0.5s ease;
 }
 
 .card::before {
@@ -36,12 +38,18 @@
     background-position: center;
     background-size: cover;
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    transform: scale(1);
+    transition: opacity 0.75s ease-in, transform 1s ease-out; 
     z-index: 1; 
 }
 
 .card:hover::before {
-    opacity: 0.03;
+    opacity: 0.1;
+    transform: scale(1.05);
+}
+
+.card:hover {
+    transform: scale(1.1);
 }
 .card .text {
     position: absolute;
@@ -49,17 +57,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start; /* Align items to the left */
+    align-items: flex-start; 
     width: 100%;
     height: 100%;
-    padding: 10px 10px 10px 20px; /* Add left padding for distance from the edge */
+    padding: 10px 10px 10px 20px; 
     box-sizing: border-box;
 }
 
 .card .text h2 {
     margin: 10px 0;
     position: relative;
-    top:40px;
+    top:1em;
     color: rgba(255, 255, 255, 0.87);
     
     text-transform: uppercase;
@@ -68,7 +76,7 @@
 .card .text p {
     margin: 10px 0;
     position: relative;
-    top:40px;
+    top:20px;
     color: gray;
 }
 
