--- a/src/Component/Card/Card.css
+++ b/src/Component/Card/Card.css
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     box-shadow: 12px 12px 12px rgba(255, 255, 255, 0.1);
-    border-radius: 8px;
+    border-radius: 18px;
     position: relative; 
     overflow: hidden; 
     background-color: #2c2c2c;
@@ -95,9 +95,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transform:scale(1);
+    transition: transform 0.3s ease-in-out;
     background-color: rgba(255, 255, 255, 0.596);
 }
 .btn:hover
 {
-    scale:1.1;
+    transform: scale(1.1);
 }
